added endpoint to update posts
